AUT-6940 refactors for docs, java 21, deprecated calls, fixed 1000+ linter warnings :-|